--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4",
+    "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
